# telescope

./: .bandit.baseline  .dockerignore  .gitignore  .secrets.baseline  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  cloudbuild.yaml  clouddeploy  config.toml  config.toml.sample  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.env  template-config.toml
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: build-publish.yaml  ci.yaml  dependabot-automerge.yaml  main.yml
checks/core/: certificate_expiration.py  cloudfront_age.py  deployed_commit.py  deployed_version.py  headers.py  heartbeat.py  http_versions.py  latency.py  maintenance.py  readthedocs.py  resource_age.py
checks/data_platform/: live_main_ping_age.py  pipeline_latency.py
checks/normandy/: classify_error_rate.py  jexl_error_rate.py  recipe_signatures.py  remotesettings_recipes.py  reported_recipes.py  runner_error_rate.py  uptake_error_rate.py
checks/poucave/: heartbeat.py
checks/remotesettings/: attachments_availability.py  attachments_bundles.py  attachments_integrity.py  backported_records.py  blocked_pages.py  cdn_invalidations.py  cdn_usage.py  certificates_expiration.py  changes_timestamps.py  clients_error_rate.py  cloudfront_invalidations.py  collections_consistency.py  crlite_filter_age.py  git_reader_commit.py  last_approvals.py  latest_approvals.py  population_uptake.py  public_suffix_list.py  push_timestamp.py  requirements.txt  server_compare.py  signatures_age.py  total_approvals.py  uptake_error_rate.py  uptake_goals.py  uptake_max_age.py  uptake_max_duration.py  uptake_sign_retry_error.py  uptake_spikes.py  utils.py  validate_signatures.py  work_in_progress.py
checks/taskcluster/: create_hook.py  create_task.py  latest_indexed.py  task_e2e.py  utils.py  write_secrets.py
docs/adrs/: adr_0001_history.md
k8s/: cert.yaml  deploy.yaml  ing.yaml  secret.json  svc.yaml
libs/css/: tabler-dark.min.css
libs/js/: timeago.min.js
poucave/: __main__.py  app.py  config.py  main.py  middleware.py  typings.py  utils.py
poucave/checks/: heartbeat.py
poucave/html/: index.html  script.js  style.css
poucave/html/css/: font-awesome.min.css  libs.css  main-dark.css  main.css  svg-diagram.css  tabler.min.css
poucave/html/js/: app.js  htm_preact.module.js  libs.js  modules.js  script.js
poucave/html/js/app/: constants.mjs  index.mjs
poucave/html/js/app/components/: App.mjs  Check.mjs  CheckDetails.mjs  Dashboard.mjs  Markdown.mjs  Overview.mjs  Project.mjs  SystemDiagram.mjs  TimeAgo.mjs
poucave/html/js/app/contexts/: FocusedCheck.mjs
requirements/: constraints.txt  default.txt  dev.txt
scripts/: deploy-dockerhub.sh  merge-deps.sh  run.sh
telescope/: __main__.py  app.py  config.py  middleware.py  typings.py  utils.py
telescope/html/css/: main-dark.css  main.css
telescope/html/js/: htm_preact.mjs  timeago.min.js
telescope/html/js/app/: constants.mjs  index.mjs
telescope/html/js/app/components/: App.mjs  Check.mjs  CheckDetails.mjs  Dashboard.mjs  Markdown.mjs  Overview.mjs  Project.mjs  SystemDiagram.mjs  TagListFilter.mjs  TimeAgo.mjs
tests/: config.toml  conftest.py  test_app_init.py  test_basic_endpoints.py  test_config.py  test_influxdb.py  test_main.py  test_utils.py  utils.py
tests/checks/core/: test_certificate_expiration.py  test_cloudfront_age.py  test_deployed_commit.py  test_deployed_version.py  test_headers.py  test_heartbeat.py  test_http_versions.py  test_latency.py  test_maintenance.py  test_readthedocs.py  test_resource_age.py
tests/checks/data_platform/: test_live_main_ping_age.py  test_pipeline_latency.py
tests/checks/normandy/: test_normandy_classify_error_rate.py  test_normandy_jexl_error_rate.py  test_normandy_uptake_error_rate.py  test_recipe_signatures.py  test_recipes_signatures.py  test_remotesettings_recipes.py  test_reported_recipes.py
tests/checks/remotesettings/: config.toml  test_attachments_availability.py  test_attachments_bundles.py  test_attachments_integrity.py  test_backported_records.py  test_blocked_pages.py  test_cdn_invalidations.py  test_certificates_expiration.py  test_changes_timestamps.py  test_clients_error_rate.py  test_cloudfront_invalidations.py  test_collections_consistency.py  test_crlite_filter_age.py  test_git_reader_commit.py  test_last_approvals.py  test_latest_approvals.py  test_public_suffix_list.py  test_push_timestamp.py  test_server_compare.py  test_signatures_age.py  test_total_approvals.py  test_uptake_error_rate.py  test_uptake_max_age.py  test_uptake_max_duration.py  test_uptake_sign_retry_error.py  test_uptake_spikes.py  test_utils.py  test_validate_signatures.py  test_work_in_progress.py
tests/checks/taskcluster/: test_create_hook.py  test_create_task.py  test_latest_indexed.py  test_task_e2e.py  test_write_secrets.py
(+2 files in other folders)
