[tool.poetry]
name = "telescope"
version = "0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "^3.11.12"
toml = "^0.10.2"
dockerflow = "^2024.4.2"
async-timeout = "^5.0.1"
sentry-sdk = "^2.20.0"
termcolor = "^2.5.0"
aiohttp_cors = "^0.7.0"
backoff = "^2.2.1"
python-decouple = "^3.8"
logging-color-formatter = "^1.1.0"
google-cloud-bigquery = "^3.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
aioresponses = "^0.7.8"
pytest-aiohttp = "^1.1.0"
mypy = "^1.15"
pytest-cov = "^6.0.0"
bandit = "^1.8.2"
responses = "^0.25.6"
types-toml = "^0.10.8"
types-requests = "^2.32.0"
types-termcolor = "^1.1.6"
ruff = "^0.9.6"
detect-secrets = "^1.5.0"

[tool.poetry.group.remotesettings]
optional = true

[tool.poetry.group.remotesettings.dependencies]
kinto-http = "^11.7.1"
cryptography = "^44.0.1"
websockets = "^14.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
autograph-utils = "^1.0.1"
canonicaljson-rs = "^0.7.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = [
    "__pycache__",
    ".venv/",
    "kinto/plugins/admin/node_modules/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
